--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "start": "node dist/index.js"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^28.0.2",
         "@rollup/plugin-json": "^6.1.0",
         "@swc/helpers": "^0.5.15",
         "@types/node": "^22.10.1",
@@ -29,5 +30,8 @@
         "tabWidth": 4,
         "printWidth": 120
     },
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "@rollup/plugin-node-resolve": "^16.0.0"
+    }
 }
